added Flammability check

--- a/WebsiteStuff/palette.html
+++ b/WebsiteStuff/palette.html
@@ -28,6 +28,8 @@
                 <input type="color" id="color-picker" name="color-picker" value="#ff0000">
                 <label for="block-count" color = "black">Number of blocks:</label>
                 <input type="number" id="block-count" name="block-count" min="1" max="10" value="5">
+                <label for="Flammability check">Exlude flamable blocks</label><br>
+                <input type="checkbox" id="Flammability-check" name="Flammability" value="Flammable">
             </div>
             
             <div class="block-count-container">
@@ -47,6 +49,7 @@
         const testPaletteButton = document.getElementById('test-Palette-button');
         const blockCountInput = document.getElementById('block-count');
         const paletteContainer = document.getElementById('palette-container');
+        const flammabilityCheck = document.getElementById('Flammability-check');
 
         function ReadableFileName(fileName) {
             let nameWithoutExt = fileName.replace(/.[^/.]+$/, "");
@@ -87,6 +90,9 @@
                 for (var i = 0; i < csv.length; i++) {
                     inPalette = false;
                     if (MatchColor("#" + csv[i][1], colorPicker.value, baseRange)) {
+                        if(flammabilityCheck.checked && csv[i][3] === "true") {
+                            continue; // Skip flammable blocks if the checkbox is checked
+                        }
                         console.log("Match found: ", csv[i][1]);
                         for (var j = 0; j < palette.length; j++) {
                             if (palette[j] === csv[i][2]) {
