--- a/WebsiteStuff/circle_gen.html
+++ b/WebsiteStuff/circle_gen.html
@@ -1,3 +1,4 @@
+<!-- ChatGPT was used to generate UI elements, and just generally make the page look good-->
 <!doctype HTML>
 <html lang='en'>
 <head>
